crates/weft-snapshots/tests/snapshots/lit-js/example-color-picker.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-color-picker as lit-js
---
import { LitElement, html } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _color(v) {
  return /^#[0-9a-fA-F]{6}$/.test(v) ? v.toLowerCase() : "#000000";
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Theme"
      ><label
        ><span aria-hidden="true">Accent colour</span
        ><input data-weft-id="accent" type="color" aria-label="Accent colour" .value=${_color(_text(data?.accent))} @input=${(_e) => { const _v = _e.currentTarget.value; if (_v !== undefined) onChange?.("$.accent", _v); _act(actions, { id: "accent", action: "theme.update" }); }}
      ></label
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
