crates/weft-snapshots/tests/snapshots/lit-js/example-combobox.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-combobox as lit-js
---
import { LitElement, html } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Shipping">${(() => {
        const _o = [
          { value: "Lisbon", el: html`<option data-weft-id="city-lisbon" value="Lisbon">Portugal</option>` },
          { value: "Madrid", el: html`<option data-weft-id="city-madrid" value="Madrid">Spain</option>` },
        ];
        return html`<label
            ><span aria-hidden="true">City</span
            ><input data-weft-id="city" aria-label="City" list=${"weft-city-options"} placeholder="Type a city" .value=${_text(data?.city)} @input=${(_e) => { const _v = _e.currentTarget.value; if (_v !== undefined) onChange?.("$.city", _v); _act(actions, { id: "city", action: "shipping.update" }); }}
            ><datalist id=${"weft-city-options"}>${_o.map((_x) => _x.el)}</datalist
          ></label>`;
      })()}</main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
