crates/weft-snapshots/tests/snapshots/lit-js/example-dialog.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-dialog as lit-js
---
import { LitElement, html } from "lit";

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Files">${_on(data?.confirmOpen) ? html`<dialog data-weft-id="confirm" aria-label="Delete file?" open aria-modal="true" @keydown=${(_e) => { if (_e.key !== "Escape") return; _e.preventDefault(); onChange?.("$.confirmOpen", false); _act(actions, { id: "confirm", action: "dialog.close" }); }}
          ><div data-weft-id="warn">This cannot be undone.</div
          ><div data-weft-slot="actions"
            ><button data-weft-id="cancel" type="button" @click=${(_e) => _act(actions, { id: "cancel", action: "dialog.close" })}>Cancel</button
            ><button data-weft-id="ok" type="button" data-variant="danger" @click=${(_e) => _act(actions, { id: "ok", action: "file.delete" })}>Delete</button
          ></div
        ></dialog>` : null}</main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
