crates/weft-snapshots/tests/snapshots/lit-js/example-field.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-field as lit-js
---
import { LitElement, html, nothing } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Sign up"
      ><div data-weft-field=""
        ><label
          ><span aria-hidden="true">Email</span
          ><input data-weft-id="email" data-state="valid" aria-label="Email" type="email" placeholder="you@example.com" required aria-invalid=${"valid" === "invalid" || _text(data?.errors?.email) !== "" ? "true" : undefined} aria-describedby=${(_text(data?.errors?.email) ? "weft-email-error" : undefined) ?? nothing} .value=${_text(data?.email)} @input=${(_e) => { onChange?.("$.email", _e.currentTarget.value); _act(actions, { id: "email", action: "form.edit" }); }}
        ></label>${_text(data?.errors?.email) ? html`<div id=${"weft-email-error"}>${_text(data?.errors?.email)}</div>` : null}</div
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
