crates/weft-snapshots/tests/snapshots/lit-js/example-grid.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-grid as lit-js
---
import { LitElement, html } from "lit";
import { styleMap } from "lit/directives/style-map.js";

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Gallery"
      ><div data-weft-id="cards" style=${styleMap({ gap: "var(--weft-space-lg)", display: "grid", gridTemplateColumns: "repeat(3, minmax(0, 1fr))" })}
        ><div data-weft-id="card-a">Revenue</div
        ><div data-weft-id="card-b">Orders</div
        ><div data-weft-id="card-c">Visitors</div
      ></div
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
