crates/weft-snapshots/tests/snapshots/lit-js/example-heading.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-heading as lit-js
---
import { LitElement, html } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Settings"
      ><h1 data-weft-id="title">Settings</h1
      ><h2 data-weft-id="subtitle">${!(_text(data?.section?.title).trim() === "") ? _squash(_text(data?.section?.title)) : ""}</h2
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
