crates/weft-snapshots/tests/snapshots/lit-js/example-item.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-item as lit-js
---
import { LitElement, html } from "lit";

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _press(e, fire) {
  if (e.target !== e.currentTarget || (e.key !== "Enter" && e.key !== " ")) return;
  e.preventDefault();
  fire();
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Inbox"
      ><ol data-weft-id="inbox"
        ><li data-weft-id="msg-1" tabindex=${0} @click=${() => _act(actions, { id: "msg-1", action: "inbox.open" })} @keydown=${(_e) => _press(_e, () => _act(actions, { id: "msg-1", action: "inbox.open" }))}
          ><div data-weft-id="msg-1-from" data-tone="muted">Ana</div
          ><div data-weft-id="msg-1-subject">Welcome aboard</div
        ></li
      ></ol
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
